--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Zhicheng Sun</title>
+    <title>Yan-Shuo Liang</title>
 
-    <meta name="author" content="Zhicheng Sun">
+    <meta name="author" content="Yan-Shuo Liang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="icon" type="image/png" href="images/icon.png">
+    <link rel="nju" type="image/jpeg" href="images/nju.jpeg">
     <meta name="google-site-verification" content="3k2iM7c_w5qn3HQtP_iwpSd-zFu-hQRULkyH8jPqLDc" />
 </head>
 
@@ -23,26 +23,26 @@
                 <tr style="padding:0">
                     <td style="padding:2.5%;width:63%;vertical-align:middle">
                         <p style="text-align:center">
-                            <name>Zhicheng Sun 「孙至诚」</name>
+                            <name>Yan-Shuo Liang 「梁宴硕」</name>
                         </p>
-                        <p>I am a PhD student in <a href="http://www.aais.pku.edu.cn">Academy for Advanced Interdisciplinary Studies</a> at Peking University,
-                            where I am fortunate to be advised by Prof. <a href="http://www.muyadong.com">Yadong Mu</a>.
-                            Before that, I obtained my B.S. degree in Computer Science from Peking University.
+                        <p>I am a PhD student in <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
+                            where I am fortunate to be advised by Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>.
+                            Before that, I obtained my B.S. degree in <a href="https://math.nju.edu.cn">Department of Mathematics</a>, Nanjing University.
                         </p>
                         <p>
-                            Email: sunzc [at] pku [dot] edu [dot] cn
+                            Email: liangys [at] smail [dot] nju [dot] edu [dot] cn
                         </p>
                         <p style="text-align:center">
                             <a href="https://scholar.google.com/citations?user=Xa8dgkYAAAAJ">Google Scholar</a>
                             &nbsp/&nbsp
-                            <a href="https://www.linkedin.com/in/zhicheng-sun">LinkedIn</a> &nbsp/&nbsp
-                            <a href="https://github.com/feifeiobama">Github</a> &nbsp/&nbsp
-                            <a href="https://twitter.com/feifeiobama">Twitter</a>
+                            <!-- <a href="https://www.linkedin.com/in/zhicheng-sun">LinkedIn</a> &nbsp/&nbsp -->
+                            <a href="https://github.com/liangyanshuo">Github</a> &nbsp/&nbsp
+                            <!-- <a href="https://twitter.com/feifeiobama">Twitter</a> -->
                         </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
-                        <a href="images/ZhichengSun.jpg"><img style="width:100%;max-width:100%" alt="profile photo"
-                                                            src="images/ZhichengSun.jpg" class="hoverZoomLink"></a>
+                        <a href="images/liangyanshuo.jpg"><img style="width:80%;max-width:80%" alt="profile photo"
+                                                            src="images/liangyanshuo.jpg" class="hoverZoomLink"></a>
                     </td>
                 </tr>
                 </tbody>
