--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <tr style="padding:0">
                     <td style="padding:2.5%;width:63%;vertical-align:middle">
                         <p style="text-align:center">
-                            <name><font size="7"><strong>Yan-Shuo Liang 「梁宴硕」</strong></font></name>
+                            <name>Yan-Shuo Liang 「梁宴硕」</name>
                         </p>
                         <p>I am a PhD student in <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
                             where I am fortunate to be advised by Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>.
