--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             Email: liangys [at] smail [dot] nju [dot] edu [dot] cn
                         </p>
                         <p style="text-align:center">
-                            <a href="https://scholar.google.com/citations?user=Xa8dgkYAAAAJ">Google Scholar</a>
+                            <a href="https://dblp.org/pid/329/6195.html">DBLP</a>
                             &nbsp/&nbsp
                             <!-- <a href="https://www.linkedin.com/in/zhicheng-sun">LinkedIn</a> &nbsp/&nbsp -->
                             <a href="https://github.com/liangyanshuo">Github</a> &nbsp/&nbsp
