--- a/index.html
+++ b/index.html
@@ -162,6 +162,22 @@
             </table>
 
 
+            <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <tbody>
+                <tr>
+                    <td style="padding:2.5%;width:100%;vertical-align:middle">
+                        <heading>Awards & Honors</heading>
+                        <p>
+                            Principal Special Scholarship, Nanjing University, 2020
+                        </p>
+                        <p>
+                            Huawei Scholarship, 2023
+                        </p>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            
             <!-- <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
                 <tr>
