--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </td>
                     <td style="padding-left:20px;width:75%;vertical-align:top">
                         <a href=".">
-                            <papertitle>Loss Decoupling for Continual Learning</papertitle>
+                            <papertitle>Loss Decoupling for Task-Agnostic Continual Learning</papertitle>
                         </a>
                         <br>
                         <strong>Yan-Shuo Liang</strong>,
