--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <meta name="author" content="Yan-Shuo Liang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name=”description” content=”Yan-Shuo Liang”>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="nju" type="image/jpeg" href="images/nju.jpeg">
