change some info

--- a/index.html
+++ b/index.html
@@ -30,19 +30,17 @@
                             where I am fortunate to be advised by Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>.
                             Before that, I obtained my B.S. degree in <a href="https://math.nju.edu.cn">Department of Mathematics</a>, Nanjing University.
                         </p>
-                        <p>
-                            Email: liangys [at] smail [dot] nju [dot] edu [dot] cn
-                        </p>
                         <p style="text-align:center">
                             <a href="https://dblp.org/pid/329/6195.html">DBLP</a>
                             &nbsp/&nbsp
                             <!-- <a href="https://www.linkedin.com/in/zhicheng-sun">LinkedIn</a> &nbsp/&nbsp -->
-                            <a href="https://github.com/liangyanshuo">Github</a> &nbsp/&nbsp
+                            <a href="https://github.com/liangyanshuo">Github</a> 
+                            <!-- &nbsp/&nbsp -->
                             <!-- <a href="https://twitter.com/feifeiobama">Twitter</a> -->
                         </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
-                        <a href="images/liangyanshuo.jpg"><img style="width:80%;max-width:80%" alt="profile photo"
+                        <a href="images/liangyanshuo.jpg"><img style="width:60%;max-width:80%" alt="profile photo"
                                                             src="images/liangyanshuo.jpg" class="hoverZoomLink"></a>
                     </td>
                 </tr>
@@ -169,10 +167,42 @@
                     <td style="padding:2.5%;width:100%;vertical-align:middle">
                         <heading>Awards & Honors</heading>
                         <p>
-                            Principal Special Scholarship, Nanjing University, 2020
+                            Presidential Special Scholarship, Nanjing University, 2020
                         </p>
                         <p>
                             Huawei Scholarship, 2023
+                        </p>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+            <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <tbody>
+                <tr>
+                    <td style="padding:2.5%;width:100%;vertical-align:middle">
+                        <heading>Teaching Assistant</heading>
+                        <p>
+                            Data Structure. (For undergraduate students, Autumn, 2020)
+                        </p>
+                        <p>
+                            Data Structure. (For undergraduate students, Spring, 2021)
+                        </p>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+            <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <tbody>
+                <tr>
+                    <td style="padding:2.5%;width:100%;vertical-align:middle">
+                        <heading>Contact</heading>
+                        <p>
+                            Email: liangys [at] smail [dot] nju [dot] edu [dot] cn
+                        </p>
+                        <p>
+                            Nanjing University Xianlin Campus, 163 Xianlin Avenue, Qixia District, Nanjing, Jiangsu 210023, China
                         </p>
                     </td>
                 </tr>
