--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="nju" type="image/jpeg" href="images/nju.jpeg">
-    <meta name="google-site-verification" content="3k2iM7c_w5qn3HQtP_iwpSd-zFu-hQRULkyH8jPqLDc" />
 </head>
 
 <body>
@@ -26,9 +25,7 @@
                         <p style="text-align:center">
                             <name>Yan-Shuo Liang 「梁宴硕」</name>
                         </p>
-                        <p>I am a PhD student in <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
-                            where I am fortunate to be advised by Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>.
-                            Before that, I obtained my B.S. degree in <a href="https://math.nju.edu.cn">Department of Mathematics</a>, Nanjing University.
+                        <p>Currently, I am a PhD student in Department of Computer Science and Technology at Nanjing University, where I am fortunate to be advised by Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>.
                         </p>
                         <p style="text-align:center">
                             <a href="https://dblp.org/pid/329/6195.html">DBLP</a>
@@ -47,6 +44,21 @@
                 </tbody>
             </table>
 
+            <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <tbody>
+                <tr>
+                    <td style="padding:2.5%;width:100%;vertical-align:middle">
+                        <heading>Biography</heading>
+                        <p>
+                            2020.09-Present: PhD student, <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
+                        </p>
+                        <p>
+                            2016.09-2020.06: B.S., <a href="https://math.nju.edu.cn">Department of Mathematics</a> at Nanjing University,
+                        </p>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
 
             <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
