--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="nju" type="image/jpeg" href="images/nju.jpeg">
+    <meta name="google-site-verification" content="CNhbLx2BoehPp-DOYxfY7G2WAZaVafc1PVgPelqlibg" />
 </head>
 
 <body>
