--- a/index.html
+++ b/index.html
@@ -79,6 +79,37 @@
             <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
 
+
+                <tr>
+                    <td style="padding-left:2.5%;padding-right:20px;width:25%;vertical-align:middle">
+                        <div class="one">
+                            <img src='images/InfLoRA.png' width="180px" alt="LODE">
+                        </div>
+                    </td>
+                    <td style="padding-left:20px;width:75%;vertical-align:top">
+                        <a href=".">
+                            <papertitle>InfLoRA: Interference-Free Low-Rank Adaptation for Continual Learning</papertitle>
+                        </a>
+                        <br>
+                        <strong>Yan-Shuo Liang</strong>,
+                        <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>,
+                        <br>
+                        <em>CVPR</em>, 2024 
+                        <br>
+                        <a href="https://arxiv.org/abs/2404.00228">paper</a>
+                        /
+                        <a href="https://github.com/liangyanshuo/InfLoRA">code</a>
+                        /
+                        <a href="data/LODE.bib">bibtex</a>
+                        <p></p>
+                        <p>
+                            we propose a new PEFT method, called InfLoRA, for continual learning. InfLoRA injects a small number of parameters to reparameterize the pre-trained weights and shows that fine-tuning these injected parameters is equivalent to fine-tuning the pre-trained weights within a subspace. Furthermore, InfLoRA designs this subspace to eliminate the interference of the new task on the old tasks, making a good trade-off between stability and plasticity.
+                        </p>
+                    </td>
+                </tr>
+
+
+
                 <tr>
                     <td style="padding-left:2.5%;padding-right:20px;width:25%;vertical-align:middle">
                         <div class="one">
@@ -95,9 +126,9 @@
                         <br>
                         <em>NeurIPS</em>, 2023 
                         <br>
-                        <a href=".">paper</a>
+                        <a href="https://proceedings.neurips.cc/paper_files/paper/2023/hash/249f73e01f0a2bb6c8d971b565f159a7-Abstract-Conference.html">paper</a>
                         /
-                        <a href="https://github.com/liangyanshuo/lode">code</a>
+                        <a href="https://github.com/liangyanshuo/Loss-Decoupling-for-Task-Agnostic-Continual-Learning">code</a>
                         /
                         <a href="data/LODE.bib">bibtex</a>
                         <p></p>
