--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <p style="text-align:center">
                             <name>Yan-Shuo Liang 「梁宴硕」</name>
                         </p>
-                        <p>Currently, I am a PhD student in Department of Computer Science and Technology at Nanjing University, where I am fortunate to be advised by Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>.
+                        <p>Currently, I am a PhD candidate in Department of Computer Science and Technology at Nanjing University, where I am fortunate to be advised by Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>.
                         </p>
                         <p style="text-align:center">
                             <a href="https://dblp.org/pid/329/6195.html">DBLP</a>
@@ -51,7 +51,10 @@
                     <td style="padding:2.5%;width:100%;vertical-align:middle">
                         <heading>Biography</heading>
                         <p>
-                            2020.09-Present: PhD student, <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
+                            2024.03-Present: PhD student, <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
+                        </p>
+                        <p>
+                            2020.09-2024.03: PhD student, <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
                         </p>
                         <p>
                             2016.09-2020.06: B.S., <a href="https://math.nju.edu.cn">Department of Mathematics</a> at Nanjing University,
