--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <td style="padding:2.5%;width:100%;vertical-align:middle">
                         <heading>Biography</heading>
                         <p>
-                            2024.03-Present: PhD student, <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
+                            2024.03-Present: PhD candidate, <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
                         </p>
                         <p>
                             2020.09-2024.03: PhD student, <a href="https://cs.nju.edu.cn">Department of Computer Science and Technology</a> at Nanjing University,
