--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name=”description” content=”Yan-Shuo Liang”>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="nju" type="image/jpeg" href="images/nju.jpeg">
+    <link rel="nju" type="image/png" href="images/nju.png">
     <meta name="google-site-verification" content="CNhbLx2BoehPp-DOYxfY7G2WAZaVafc1PVgPelqlibg" />
 </head>
 
