--- a/index.html
+++ b/index.html
@@ -142,9 +142,7 @@
         <div class="profile-text">
             <h1>Yan-Shuo Liang 「梁宴硕」</h1>
             <p>
-                Currently, I am a PhD candidate in the Department of Computer Science and Technology at 
-                <a href="https://cs.nju.edu.cn/lwj">Nanjing University</a>, advised by Prof. Wu-Jun Li. 
-                I will graduate in 2026 and am currently seeking job opportunities.
+                Currently, I am a PhD candidate in the Department of Computer Science and Technology at Nanjing University, under the supervision of Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>. I will graduate in 2026 and am currently actively seeking full-time roles or internship opportunities in both industry and academia.
             </p>
             <p class="links">
                 <a href="resume.pdf">CV</a> / 
