--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </section>    
 
     <section>
-        <h2>Publications</h2>
+        <h2>Publications (First Author)</h2>
 
         <div class="paper">
             <img src="images/GainLoRA.png" alt="GainLoRA">
