add some descrip

--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
         <div class="profile-text">
             <h1>Yan-Shuo Liang 「梁宴硕」</h1>
             <p>
-                Currently, I am a PhD candidate in the Department of Computer Science and Technology at Nanjing University, under the supervision of Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a>. I will graduate in 2026 and am currently actively seeking full-time roles or internship opportunities in both industry and academia.
+                I am currently a PhD candidate in the Department of Computer Science and Technology at Nanjing University, supervised by Prof. <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li (李武军)</a>.
+            </p>
+            <p>
+                I received my B.Sc. degree from the Department of Mathematics at Nanjing University in 2020. In the same year, I was admitted to study for a PhD degree without entrance examination. I will complete my PhD in 2026 and am currently actively seeking full-time or internship opportunities in both industry and academia.
+                <!-- I received my B.Sc. degree from Department of Mathematics, Nanjing University in 2020. In the same year, I was admitted to study for a PhD degree without entrance examination. I will graduate in 2026 and am currently actively seeking full-time roles or internship opportunities in both industry and academia. -->
             </p>
             <p class="links">
                 <a href="resume.pdf">CV</a> / 
