add some descrip

--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
     <section>
         <h2>Awards & Honors</h2>
         <ul>
-            <li>Presidential Special Scholarship, Nanjing University, 2020</li>
-            <li>Huawei Scholarship, Nanjing University, 2023</li>
-            <li>Outstanding Graduate Student of Nanjing University, 2024</li>
-            <li>National Scholarship for PhD Students, Nanjing University, 2024</li>
+            <li>博士生校长特别奖学金. Presidential Special Scholarship, Nanjing University, 2020</li>
+            <li>华为奖学金. Huawei Scholarship, Nanjing University, 2023</li>
+            <li>南京大学优秀研究生标兵. Outstanding Graduate Student of Nanjing University, 2024</li>
+            <li>博士生国家奖学金. National Scholarship for PhD Students, Nanjing University, 2024</li>
         </ul>
     </section>
 
