add some descrip

--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@
             </p>
             <p class="links">
                 <a href="resume.pdf">CV</a> / 
+                <!-- <a href="mailto:liangys@smail.nju.edu.cn">liangys@smail.nju.edu.cn</a> &nbsp;/&nbsp; -->
                 <a href="https://github.com/liangyanshuo">Github</a> / 
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=e04lsgsAAAAJ">Google Scholar</a> /
-                <a href="https://dblp.org/pid/329/6195.html">DBLP</a> 
+                <a href="https://dblp.org/pid/329/6195.html">DBLP</a> /
+                <a href="mailto:liangys@smail.nju.edu.cn">Email: liangys@smail.nju.edu.cn</a>
             </p>
         </div>
         <div class="profile-photo">
