add some descrip

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <img src="images/GainLoRA.png" alt="GainLoRA">
             <div class="paper-content">
                 <a href="https://arxiv.org/abs/2505.15424" class="paper-title">Gated Integration of Low-Rank Adaptation for Continual Learning of Language Models</a>
-                <div><strong>Yan-Shuo Liang</strong>, <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a></div>
+                <div><strong>Yan-Shuo Liang</strong>, Wu-Jun Li
                 <div class="paper-meta">Conference on Neural Information Processing Systems (NeurIPS), 2025, CCF-A First Author</div>
                 <div class="paper-links">
                     <a href="https://arxiv.org/pdf/2505.15424">paper</a>
@@ -219,7 +219,7 @@
             <img src="images/InfLoRA.png" alt="InfLoRA">
             <div class="paper-content">
             <a href="https://openaccess.thecvf.com/content/CVPR2024/html/Liang_InfLoRA_Interference-Free_Low-Rank_Adaptation_for_Continual_Learning_CVPR_2024_paper.html" class="paper-title">InfLoRA: Interference-Free Low-Rank Adaptation for Continual Learning</a>
-            <div><strong>Yan-Shuo Liang</strong>, <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a></div>
+            <div><strong>Yan-Shuo Liang</strong>, Wu-Jun Li
             <div class="paper-meta">Computer Vision and Pattern Recognition Conference (CVPR), 2024, CCF-A First Author</div>
             <div class="paper-links">
                 <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Liang_InfLoRA_Interference-Free_Low-Rank_Adaptation_for_Continual_Learning_CVPR_2024_paper.pdf">paper</a>
@@ -236,7 +236,7 @@
             <img src="images/LODE.png" alt="LODE">
             <div class="paper-content">
             <a href="https://proceedings.neurips.cc/paper_files/paper/2023/hash/249f73e01f0a2bb6c8d971b565f159a7-Abstract-Conference.html" class="paper-title">Loss Decoupling for Task-Agnostic Continual Learning</a>
-            <div><strong>Yan-Shuo Liang</strong>, <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a></div>
+            <div><strong>Yan-Shuo Liang</strong>, Wu-Jun Li
             <div class="paper-meta">Annual Conference on Neural Information Processing Systems (NeurIPS), 2023, CCF-A First Author</div>
             <div class="paper-links">
                 <a href="https://proceedings.neurips.cc/paper_files/paper/2023/file/249f73e01f0a2bb6c8d971b565f159a7-Paper-Conference.pdf">paper</a>
@@ -253,7 +253,7 @@
             <img src="images/API.png" alt="API">
             <div class="paper-content">
             <a href="https://openaccess.thecvf.com/content/CVPR2023/html/Liang_Adaptive_Plasticity_Improvement_for_Continual_Learning_CVPR_2023_paper.html" class="paper-title">Adaptive Plasticity Improvement for Continual Learning</a>
-            <div><strong>Yan-Shuo Liang</strong>, <a href="https://cs.nju.edu.cn/lwj">Wu-Jun Li</a></div>
+            <div><strong>Yan-Shuo Liang</strong>, Wu-Jun Li
             <div class="paper-meta">Computer Vision and Pattern Recognition Conference (CVPR), 2023, CCF-A First Author</div>
             <div class="paper-links">
                 <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Liang_Adaptive_Plasticity_Improvement_for_Continual_Learning_CVPR_2023_paper.pdf">paper</a>
