--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <h3>ByteDance, Hangzhou <span style="font-weight: normal;">(May 2025 – Sep 2025)</span></h3>
             <ul>
                 <li><strong>Department:</strong> Data-AML – Applied Algorithms Team</li>
-                <li><strong>Position:</strong> Large Model Algorithm Intern (Large Systems & Compute) – Jindouyun Talent Program</li>
+                <li><strong>Position:</strong> Large Model Algorithm Intern (Large Systems & Compute) – Soaring Star Talent Program</li>
                 <!-- <li><strong>Task 1:</strong> Introduced Progressive Learning strategy to train a multimodal recommendation large model, enabling scaling up during training. First, trained most data with a smaller model, then scaled to a larger model. Result: training efficiency increased by ~30%, and final performance matched training a large model from scratch, achieving efficient training.</li> -->
                 <!-- <li><strong>Task 2:</strong> Applied next-generation optimizer Muon to train a multimodal recommendation large model. Compared with Adam, Muon significantly improved training efficiency and model performance for ~1B and ~7B parameter models. Using only ~60% of the dataset, it achieved the same performance as Adam with full data.</li> -->
             </ul>
@@ -265,9 +265,6 @@
             </p>
             </div>
         </div>
-
-        
-        <!-- 你可以把其他论文也按照相同格式改写 -->
     </section>
 
     <section>
