--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <!-- I received my B.Sc. degree from Department of Mathematics, Nanjing University in 2020. In the same year, I was admitted to study for a PhD degree without entrance examination. I will graduate in 2026 and am currently actively seeking full-time roles or internship opportunities in both industry and academia. -->
             </p>
             <p class="links">
-                <a href="resume.pdf">CV</a> / 
+                <!-- <a href="resume.pdf">CV</a> /  -->
                 <!-- <a href="mailto:liangys@smail.nju.edu.cn">liangys@smail.nju.edu.cn</a> &nbsp;/&nbsp; -->
                 <a href="https://github.com/liangyanshuo">Github</a> / 
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=e04lsgsAAAAJ">Google Scholar</a> /
